# printBar

./: README_en.md  README_ja.md
.github/workflows/: build-linux.yml  build-macos.yml  release.yml
src/: Makefile.in  config.h.in  configure  configure.ac  printbar.c  sample.txt  tpbar.c
